--- a/.drone.yml
+++ b/.drone.yml
@@ -3,24 +3,32 @@ git:
   path: github.com/santpani/cloudepg
 script:
   - echo "build commands"
-  - bin/build
-  - bin/test
+  - echo "no build command"
+  - echo "no test command"
+clone:
+  path: github.com/santpani/cloudepg
+build:
+  image: mikejihbe/nodejs-ssh:latest
+  commands:
+    - echo "build commands"
+    - echo "no build command"
+    - echo "no test command"
 publish:
   docker:
-    dockerfile: ./Dockerfile
-    docker_host: 173.39.241.255:2375
-    docker_version: 1.4.1
-    registry_login_url: $$bintray_repo_login_url
-    registry_login: true
-    username: $$bintray_user
-    password: $$bintray_api_key
-    email: $$bintray_user_email
-    image_name: $$bintray_image_name
-    push_latest: true
-    tag: $DRONE_COMMIT
+    file: ./Dockerfile
+    username: $$docker_user
+    password: $$docker_key
+    registry: $$docker_registry
+    repo: $$docker_repo
+    email: $$docker_user_email
+    tag: $$COMMIT
+    
+
+
 notify:
   webhook:
+    image: shippedrepos-docker-drone.bintray.io/drone-webhook
     urls:
-      - "http://shipped-api.shipped-cisco.com/webhooks/drone"
+      - "https://api.ciscoshipped.io/webhooks/drone"
     on_success: true
     on_failure: true
